--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# requirements.txt
-aiogram==3.0.0
-aiohttp~=3.8.5
-aiofiles~=23.1.0
+python-telegram-bot==20.7
+apscheduler==3.10.4
+cryptography==3.4.8  # Pinned to avoid Rust compilation issues
